export const snapshot = {};

snapshot[`FsrsProgressScheduler - update assignment with Default SRS 1`] = `
[
  0.5,
  1,
  3,
  7,
  14,
  23,
  35,
  50,
  65,
  85,
]
`;

snapshot[`FsrsProgressScheduler - update assignment with Fast SRS 1`] = `
[
  0.5,
  1,
  2,
  5,
  12,
  25,
  40,
  55,
  101,
  101,
]
`;
